--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,10 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "illuminate/support": "^6.0"
+        "php": "^7.1"
     },
     "require-dev": {
-        "orchestra/testbench": "^4.0",
-        "phpunit/phpunit": "^8.0"
+        "orchestra/testbench": "^6.3"
     },
     "autoload": {
         "psr-4": {
