--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "php": "^7.1"
+        "php": "^7.1",
+        "kreait/laravel-firebase": "^3.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.3"
