--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "kreait/laravel-firebase": "^3.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.3"
+        "orchestra/testbench": "^6.3",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
         "psr-4": {
@@ -33,9 +34,11 @@
         }
     },
     "scripts": {
+        "lint": [
+            "vendor/bin/phpcs --standard=PSR12 ./src ./config ./tests"
+        ],
         "test": "vendor/bin/phpunit",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
-
     },
     "config": {
         "sort-packages": true
