Test workflow for github actions

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,3 +30,7 @@ jobs:
       uses: codecov/codecov-action@v1
       with:
           file: ./coverage.xml
+
+    # Run test
+    - name: Test
+      run: echo '${{ Staging.FIREBASE_CREDENTIALS }}'
