--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     environment:
-      - name: staging
+      - name: Staging
 
     steps:
     # Checks out a copy of your repository on the ubuntu-latest machine
