--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,7 +28,7 @@ jobs:
 
     # Run test
     - name: Run create firebase credential file
-      run: echo -n -e "${{ FIREBASE_CREDENTIALS }}" > ./laravel-config-firebase.json
+      run: echo -n -e "${{ env.FIREBASE_CREDENTIALS }}" > ./laravel-config-firebase.json
 
     # Run test for package
     - name: Run phpunit
