--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,12 +27,12 @@ jobs:
       run: composer lint
 
     # Run test
-    - name: Run gpg
-      run: gpg --symmetric --cipher-algo AES256 my_secret.json
-
-    # Run test
     - name: Run create firebase credential file
       run: echo -n -e "${{ secrets.FIREBASE_CREDENTIALS }}" > ./laravel-config-firebase.json
+
+    # Run test
+    - name: Run gpg
+      run: gpg --symmetric --cipher-algo AES256 laravel-config-firebase.json
 
     # Run test for package
     - name: Run phpunit
