--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,12 +27,22 @@ jobs:
       run: composer lint
 
     # Run test
-    - name: Run create firebase credential file
-      run: echo -n -e "${{ secrets.FIREBASE_CREDENTIALS }}" > ./laravel-config-firebase.json
+    # - name: Run create firebase credential file
+    #  run: echo -n -e "${{ secrets.FIREBASE_CREDENTIALS }}" > ./laravel-config-firebase.json
 
     # Run test
-    - name: Run gpg
-      run: gpg --symmetric --cipher-algo AES256 ./laravel-config-firebase.json
+    # - name: Run gpg
+    #  run: gpg --symmetric --cipher-algo AES256 ./laravel-config-firebase.json
+
+    - name: Decrypt large secret
+      run: ./.github/scripts/decrypt_secret.sh
+      env:
+        LARGE_SECRET_PASSPHRASE: ${{ secrets.LARGE_SECRET_PASSPHRASE }}
+      # This command is just an example to show your secret being printed
+      # Ensure you remove any print statements of your secrets. GitHub does
+      # not hide secrets that use this workaround.
+      - name: Test printing your secret (Remove this step in production)
+        run: cat $HOME/secrets/my_secret.json
 
     # Run test for package
     - name: Run phpunit
