--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -42,7 +42,7 @@ jobs:
       # Ensure you remove any print statements of your secrets. GitHub does
       # not hide secrets that use this workaround.
     - name: Test printing your secret (Remove this step in production)
-      run: cat $HOME/secrets/my_secret.json
+      run: cat $HOME/secrets/laravel-config-firebase.json
 
     # Run test for package
     - name: Run phpunit
